; ModuleID = '/home/carl/AnghaBench/git/extr_lockfile.c_commit_lock_file.c'
source_filename = "/home/carl/AnghaBench/git/extr_lockfile.c_commit_lock_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lock_file = type { i32 }

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @commit_lock_file(%struct.lock_file* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lock_file*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.lock_file* %0, %struct.lock_file** %3, align 8
  %6 = load %struct.lock_file*, %struct.lock_file** %3, align 8
  %7 = call i8* @get_locked_file_path(%struct.lock_file* %6)
  store i8* %7, i8** %4, align 8
  %8 = load %struct.lock_file*, %struct.lock_file** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i64 @commit_lock_file_to(%struct.lock_file* %8, i8* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load i32, i32* @errno, align 4
  store i32 %13, i32* %5, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @free(i8* %14)
  %16 = load i32, i32* %5, align 4
  store i32 %16, i32* @errno, align 4
  store i32 -1, i32* %2, align 4
  br label %20

17:                                               ; preds = %1
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @free(i8* %18)
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %17, %12
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i8* @get_locked_file_path(%struct.lock_file*) #1

declare dso_local i64 @commit_lock_file_to(%struct.lock_file*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
